// Copyright (c) 2020 IoTeX
// This is an alpha (internal) release and is not suitable for production. This source code is provided 'as is' and no
// warranties are given as to title or non-infringement, merchantability or fitness for purpose and, to the extent
// permitted by law, all liability for your use of the code is disclaimed. This source code is governed by Apache
// License 2.0 that can be found in the LICENSE file.

// To compile the proto, run:
//      protoc --go_out=plugins=grpc:. *.proto
syntax = "proto3";
package systemlogpb;

message EvmTransfer {
    bytes amount = 1;
    string from = 2;
    string to = 3;
}

message EvmTransferList {
    repeated EvmTransfer evmTransferList = 1;
}

message ActionEvmTransfer {
    bytes actionHash = 1;
    int32 numEvmTransfer = 2;
    repeated EvmTransfer evmTransferList = 3;
}

message BlockEvmTransfer {
    uint64 blockHeight = 1;
    int32 numEvmTransfer = 2;
    repeated ActionEvmTransfer actionEvmTransferList = 3;
}

message ActionHashList{
    repeated bytes actionHashList = 1;
}